public/css/navbar.css
/* === NAVBAR & DROPDOWN STYLES === */

/* Make navbar fixed on the top screen */
.fixed-navbar {
    position: fixed;
    top: 0px;
    z-index: 100;
    background-color: RGB(42,1,52);
    width: 100%;
}
.fixed-navbar a {
    color: white;
}
.fixed-navbar .dropdown-menu a {
    color: black;
}
.fixed-navbar .nav-item .active {
    color: white;
    font-weight: bold;
}
.fixed-navbar .dropdown-menu .active {
    background-color: gray;
}

/* Ensure navbar is visible */
.navbar-collapse {
    transition: all 0.3s ease;
}

/* Desktop behavior */
@media (min-width: 992px) {
    .navbar .dropdown:hover > .dropdown-menu {
        display: block !important;
    }
    
    .dropdown-submenu:hover > .dropdown-menu {
        display: block !important;
        position: absolute;
        left: 100%;
        top: 0;
        margin-top: -1px;
    }
}

/* Mobile behavior */
@media (max-width: 991px) {
    .navbar-collapse {
        max-height: 350px;
        overflow-y: auto;
        background-color: #f8f9fa;
        padding: 10px;
        border-radius: 5px;
        margin-top: 10px;
    }
    .navbar-collapse a {
        color: black;
    }
    .navbar-collapse .nav-item .active {
        color: black;
        font-weight: bold;
    }
    
    .navbar .dropdown > .dropdown-menu,
    .dropdown-submenu > .dropdown-menu {
        display: none !important;
        border: none;
        box-shadow: none;
    }
    
    .navbar .dropdown.show > .dropdown-menu,
    .dropdown-submenu.show > .dropdown-menu {
        display: block !important;
        position: static;
        float: none;
        width: 100%;
    }
    
    /* Submenu styling */
    .dropdown-submenu > .dropdown-menu {
        /* margin-left: 25px; */
        border-left: 2px solid #dee2e6;
    }
    
    /* Remove Bootstrap dropdown arrow in mobile */
    .navbar .dropdown > .dropdown-toggle::after {
        display: none !important;
    }
}

